@@ -1,3 +1,8 @@
+Thu Dec  4 21:48:12 1997  Tom Yu  <tlyu@mit.edu>
+
+	* getpty.c (pty_getpty): Fix checks on string lengths to account
+	for terminating nul character.  Some whitespace fixups.
+
 Wed Dec  3 17:16:44 1997  Tom Yu  <tlyu@mit.edu>
 
 	* pty_err.et: Add PTY_OPEN_SLAVE_TOOSHORT error code.
